[metadata]
name = adbx
version = 0.0.1
author = ysfchn
description = "ADB binaries served as Python package."
license = CC0 1.0 Universal
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ysfchn/adbx
classifiers =
    Programming Language :: Python :: 3.7
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows

[options]
package_dir =
packages = find:
python_requires = >=3.7
scripts =
    scripts/adb

[options.package_data]
adbx = 
    adb/**

[bdist_wheel]
plat-name=any